about page carousel layout shift fix

--- a/src/components/carousel/carousel.styles.css
+++ b/src/components/carousel/carousel.styles.css
@@ -29,6 +29,7 @@
 @media (min-width: 1420px) {
   .carousel-image {
     height: 60vh; 
+    width: 100%;
   }
   .carousel-text {
     font-size: 3rem;
